Add biometric screen lock

--- a/app/src/main/res/values/ids.xml
+++ b/app/src/main/res/values/ids.xml
@@ -3,6 +3,7 @@
     <item type="id" name="holder_tag"/>
     <item type="id" name="contact_info_tag"/>
     <item type="id" name="motion_view_edittext"/>
+    <item type="id" name="screen_lock_view_tag"/>
 
     <item name="reminder_action_view_insights" type="id" />
     <item name="reminder_action_invite" type="id" />
