--- a/app/src/main/res/values/strings2.xml
+++ b/app/src/main/res/values/strings2.xml
@@ -80,4 +80,6 @@
     <string name="BiometricDialogFragment__biometric_verification">Biometric verification</string>
     <string name="BiometricDialogFragment__please_confirm_its_really_you_to_access_molly">Please confirm it\'s really you to use Molly</string>
     <string name="PrivacySettingsFragment__lock_molly_access_with_fingerprint_or_face_recognition">Lock Molly access with fingerprint or face recognition</string>
+    <string name="PrivacySettingsFragment__no_biometric_features_available_on_this_device">No biometric features available on this device</string>
+    <string name="PrivacySettingsFragment__please_first_setup_your_biometrics_in_android_settings">Please first setup your biometrics in Android settings</string>
 </resources>
