--- a/app/src/main/res/layout/biometric_dialog_background.xml
+++ b/app/src/main/res/layout/biometric_dialog_background.xml
@@ -1,12 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/biometric_dialog_background"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:visibility="gone"
-    tools:visibility="visible">
+    android:layout_height="match_parent">
 
     <ImageView
         android:id="@+id/logo"
