--- a/app/src/main/res/values/ids.xml
+++ b/app/src/main/res/values/ids.xml
@@ -3,7 +3,10 @@
     <item type="id" name="holder_tag"/>
     <item type="id" name="contact_info_tag"/>
     <item type="id" name="motion_view_edittext"/>
-    <item type="id" name="screen_lock_view_tag"/>
+
+    <!-- MOLLY: ScreenLockController -->
+    <item type="id" name="screen_lock_visibility_changed_tag"/>
+    <item type="id" name="screen_lock_always_visible_tag"/>
 
     <item name="reminder_action_view_insights" type="id" />
     <item name="reminder_action_invite" type="id" />
