--- a/app/src/main/res/values-es/strings2.xml
+++ b/app/src/main/res/values-es/strings2.xml
@@ -64,7 +64,7 @@
     <string name="Megaphones_automatic_check_for_updates">Comprobación automática de las actualizaciones</string>
     <string name="DonateMegaphone_we_maintain_molly_with_your_support_consider_donating_at_open_collective">¡Mantenemos a Molly con tu apoyo! Considera la posibilidad de donar en Open Collective.</string>
     <string name="PrivacySettingsFragment_data_at_rest">Datos en reposo</string>
-    <string name="WipeMemoryService_clearing_unencrypted_data_from_ram">Borrar los datos no encriptados de la RAM</string>
+    <string name="WipeMemoryService_clearing_unencrypted_data_from_ram">Borrando los datos no encriptados de la RAM</string>
     <string name="HelpSettingsFragment_disable_and_delete_debug_log">¿Borrar y desactivar el registro de depuración\?</string>
     <string name="preferences__beta_versions_are_intended_for_testing_purposes_and_may_contain_bugs">Las versiones beta están destinadas a las pruebas y pueden contener errores</string>
     <string name="preferences__include_beta_updates">Incluir actualizaciones beta</string>
