--- a/app/src/main/res/drawable/ic_megaphone_invite_friends.xml
+++ b/app/src/main/res/drawable/ic_megaphone_invite_friends.xml
@@ -11,7 +11,7 @@
         android:fillColor="#fff"/>
     <path
         android:pathData="M180,0H0V90H180Z"
-        android:fillColor="#6191f3"
+        android:fillColor="#8F7FF1"
         android:fillAlpha="0.1"/>
     <path
         android:pathData="M25,37.2c0.6,-2.3 1.2,-4.6 2,-6.8s1.2,-2.7 1.7,-4.1l0.3,-0.5h0.9c3.3,-0.6 6.7,-1.1 10.1,-1.4a49.3,49.3 0,0 1,11.5 0.5c3.2,0.5 6.5,1.3 9.7,2.1l1.4,0.4 0.8,0.2c0.4,0.3 0.5,1.4 0.7,1.9a6.8,6.8 0,0 0,0.7 2A22.8,22.8 0,0 0,67 33.6a24.6,24.6 0,0 0,8.6 5.6,120.4 120.4,0 0,0 15.7,4h0.4l-4.1,4.5c-0.8,0.9 -1.6,1.7 -2.3,2.6s-0.4,0.5 -0.9,0.4c-2.8,-0.7 -5.6,-1.3 -8.4,-2.1a18.5,18.5 0,0 1,-3.9 -1.5,41.9 41.9,0 0,1 -5,-3.1L63,41c-0.3,-0.2 -1.2,-1.3 -1.5,-1.2s-0.8,0.7 -1,0.8L59,42a13.7,13.7 0,0 1,-2.7 2.2A33.1,33.1 0,0 1,53 45.7l-1.8,0.8 -0.6,0.2a5.8,5.8 0,0 1,-1.7 -0.6l-3.6,-1.3c-2.5,-1 -5.3,-2.1 -7.3,-3.9a2.7,2.7 0,0 1,-1 -1.1,0.8 0.8,0 0,1 -0.2,-0.5c0,-0.3 0.1,-0.3 0.4,-0.5a33.7,33.7 0,0 1,3.7 -2.4l0.9,-0.6L27.1,37Z"
