--- a/app/src/main/res/drawable/ic_megaphone_start_group.xml
+++ b/app/src/main/res/drawable/ic_megaphone_start_group.xml
@@ -12,7 +12,7 @@
     <path
         android:pathData="M0,0h180v90h-180z"
         android:strokeAlpha="0.1"
-        android:fillColor="#6191f3"
+        android:fillColor="#8F7FF1"
         android:fillAlpha="0.1"/>
     <path
         android:pathData="M103.8,51.7c-0.2,2.4 -3.5,3.7 -5.5,4.2 0.4,-2.4 1,-4.9 0.6,-7.3a20,20 0,0 0,-0.4 -2.4c0,-0.3 -0.1,-0.6 -0.1,-0.9s-0.2,-0.4 -0.1,-0.4 0.6,-0.1 0.7,-0.1l1.1,0.2a5.2,5.2 0,0 1,1.8 1.5A7.4,7.4 0,0 1,103.8 51.7ZM100,35.1a17.7,17.7 0,0 1,-6.4 2,27.9 27.9,0 0,1 -10,-0.7l-2.4,-0.6a10.5,10.5 0,0 0,1.9 6.4,49.4 49.4,0 0,0 3.6,4.4 7.7,7.7 0,0 1,2 4.7,2.1 2.1,0 0,1 -0.6,2 6.3,6.3 0,0 1,-2.3 0.8,23.2 23.2,0 0,1 -5.9,-0.2l-1.2,-0.2c-0.4,-0.1 -0.5,-0.3 -0.9,0.1a4.9,4.9 0,0 0,-1.3 2.7,13.7 13.7,0 0,0 0.3,5.7c0.4,1.8 2.5,2.7 4.1,3.2 4.7,1.2 9.9,-0.5 13.6,-3.6 0.1,-0.1 0.1,-0.2 0.2,-0.2a11.9,11.9 0,0 0,0.9 1.5,3.6 3.6,0 0,0 0.7,1l0.3,0.4h0.8a42.1,42.1 0,0 0,6.1 -1.6,12.3 12.3,0 0,0 7.1,-5.9 13.6,13.6 0,0 0,1.2 -4.8,13.2 13.2,0 0,0 -0.2,-5.6c-1,-3.4 -3.5,-6.1 -6.2,-8.2A26.9,26.9 0,0 0,100 35.1Z"
