--- a/app/src/main/res/drawable/ic_megaphone_use_sms.xml
+++ b/app/src/main/res/drawable/ic_megaphone_use_sms.xml
@@ -8,7 +8,7 @@
       android:fillColor="#fff"/>
   <path
       android:pathData="M180,0H0V90H180Z"
-      android:fillColor="#6191f3"
+      android:fillColor="#8F7FF1"
       android:fillAlpha="0.1"/>
   <path
       android:pathData="M49.9,52.6l0.3,4.3 6.5,1.5 4.9,2.2 3.9,3.5 1.9,-1.6 2.4,-5.3 2.7,-0.5 9.8,1 3.4,1.1 -1.2,5.8 -1.1,4.2 19.7,-1.2 -0.7,-9.9 -4.1,-9L82.2,40.9 70.1,42.4l-8.5,9.4 -3.7,2 -6.7,-0.3"
