--- a/app/src/main/res/values/core_colors.xml
+++ b/app/src/main/res/values/core_colors.xml
@@ -3,7 +3,7 @@
     <color name="core_ultramarine">#7b68ee</color>
     <color name="core_ultramarine_light">#8f7ff1</color>
     <color name="core_ultramarine_light_50">#bdb4f7</color>
-    <color name="core_ultramarine_dark">#5649a7</color>
+    <color name="core_ultramarine_dark">#4c33A8</color>
     <color name="core_ultramarine_icon">#7663f0</color>
     <color name="core_ultramarine_33">#557b68ee</color>
     <color name="core_ultramarine_50">#807b68ee</color>
