--- a/app/src/main/res/layout/create_passphrase_activity.xml
+++ b/app/src/main/res/layout/create_passphrase_activity.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -91,8 +90,9 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="16dp"
+            android:text="@string/RatingManager_no_thanks"
             android:textColor="@color/core_white"
-            android:text="@string/RatingManager_no_thanks" />
+            app:backgroundTint="@color/core_ultramarine_dark" />
 
     </LinearLayout>
 </ScrollView>
