--- a/app/src/main/res/values/material3_colors_dark.xml
+++ b/app/src/main/res/values/material3_colors_dark.xml
@@ -6,7 +6,7 @@
     <color name="signal_dark_colorSecondaryContainer">#46445C</color>
     <color name="signal_dark_colorSurface">#1C1C1F</color>
     <color name="signal_dark_colorSurfaceVariant">#303033</color>
-    <color name="signal_dark_colorBackground">#000000</color>
+    <color name="signal_dark_colorBackground">#1B1C1F</color>
     <color name="signal_dark_colorError">#FFB4A9</color>
     <color name="signal_dark_colorErrorContainer">#930006</color>
     <color name="signal_dark_colorOnPrimary">#23203B</color>
