Replace apk updater onboarding card by megaphone

--- a/app/src/main/res/values/strings2.xml
+++ b/app/src/main/res/values/strings2.xml
@@ -60,7 +60,6 @@
     <string name="RegistrationActivity_network_settings">Network settings</string>
     <string name="DonateMegaphone_molly_is_free_software">Molly is free software</string>
     <string name="DonateMegaphone_we_maintain_molly_with_your_support_consider_donating_at_open_collective">We maintain Molly with your support! Consider donating at Open Collective.</string>
-    <string name="Megaphones_automatic_check_for_updates">Automatic check for updates</string>
     <string name="BlockUnblockDialog_block_and_delete">Block and Delete</string>
     <string name="BackupsPreferenceFragment__schedule">Schedule</string>
     <string name="arrays__daily">Daily</string>
@@ -88,4 +87,8 @@
         <item quantity="other">%d linked devices</item>
     </plurals>
     <string name="Megaphones_turn_on_stories">Turn on stories</string>
+    <string name="EnableAppUpdatesMegaphone_check_for_updates_automatically">Check for updates automatically?</string>
+    <string name="EnableAppUpdatesMegaphone_check_for_updates">Check for updates</string>
+    <string name="EnableAppUpdatesMegaphone_molly_can_periodically_check_for_new_releases_and_ask_you_to_install_them">Molly can periodically check for new releases and ask you to install them.</string>
+    <string name="EnableAppUpdatesMegaphone_you_will_be_notified_when_updates_are_available">You will be notified when updates are available</string>
 </resources>
