Make stories opt-in

--- a/app/src/main/res/values/strings2.xml
+++ b/app/src/main/res/values/strings2.xml
@@ -87,4 +87,5 @@
         <item quantity="one">%d linked device</item>
         <item quantity="other">%d linked devices</item>
     </plurals>
+    <string name="Megaphones_turn_on_stories">Turn on stories</string>
 </resources>
