--- a/app/src/main/res/layout/device_list_item_view.xml
+++ b/app/src/main/res/layout/device_list_item_view.xml
@@ -17,6 +17,22 @@
               android:layout_width="wrap_content"
               android:layout_height="wrap_content" />
 
+    <TextView android:id="@+id/primary"
+              android:layout_width="match_parent"
+              android:layout_height="wrap_content"
+              android:textAppearance="?android:attr/textAppearanceSmall"
+              android:textColor="@color/signal_text_secondary"
+              android:text="@string/DeviceListItem_primary"
+              android:fontFamily="sans-serif-light"  />
+
+    <TextView android:id="@+id/this_device"
+              android:layout_width="match_parent"
+              android:layout_height="wrap_content"
+              android:textAppearance="?android:attr/textAppearanceSmall"
+              android:textColor="@color/signal_text_secondary"
+              android:text="@string/DeviceListItem_this_device"
+              android:fontFamily="sans-serif-light"  />
+
     <TextView android:id="@+id/created"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
