--- a/app/src/main/res/navigation/registration.xml
+++ b/app/src/main/res/navigation/registration.xml
@@ -120,6 +120,14 @@
             app:popUpTo="@id/enterPhoneNumberFragment"
             app:popUpToInclusive="true" />
 
+        <action
+            android:id="@+id/action_linkDevice"
+            app:destination="@+id/linkDeviceNameFragment"
+            app:enterAnim="@anim/nav_default_enter_anim"
+            app:exitAnim="@anim/nav_default_exit_anim"
+            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
+            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
+
     </fragment>
 
     <fragment
@@ -289,6 +297,40 @@
             android:defaultValue="@null"
             app:argType="android.net.Uri"
             app:nullable="true" />
+
+    </fragment>
+
+    <fragment
+        android:id="@+id/linkDeviceNameFragment"
+        android:name="org.thoughtcrime.securesms.registration.fragments.LinkDeviceNameFragment"
+        android:label="fragment_link_device"
+        tools:layout="@layout/fragment_registration_link_device_name">
+
+        <action
+            android:id="@+id/action_linkDevice"
+            app:destination="@id/linkDeviceFragment"
+            app:enterAnim="@anim/nav_default_enter_anim"
+            app:exitAnim="@anim/nav_default_exit_anim"
+            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
+            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
+
+    </fragment>
+
+    <fragment
+        android:id="@+id/linkDeviceFragment"
+        android:name="org.thoughtcrime.securesms.registration.fragments.LinkDeviceFragment"
+        android:label="fragment_link_device"
+        tools:layout="@layout/fragment_registration_link_device">
+
+        <action
+            android:id="@+id/action_linkDeviceComplete"
+            app:destination="@id/registrationCompletePlaceHolderFragment"
+            app:enterAnim="@anim/nav_default_enter_anim"
+            app:exitAnim="@anim/nav_default_exit_anim"
+            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
+            app:popExitAnim="@anim/nav_default_pop_exit_anim"
+            app:popUpTo="@+id/welcomeFragment"
+            app:popUpToInclusive="true" />
 
     </fragment>
 
