--- a/app/src/main/res/values-fi/strings2.xml
+++ b/app/src/main/res/values-fi/strings2.xml
@@ -61,6 +61,6 @@
     <string name="ProxyManager_successfully_started_orbot">Orbot aloitti</string>
     <string name="BlockUnblockDialog_deleted_contacts_are_still_able_to_call_you_or_send_you_messages">Poistetut yhteystiedot voivat edelleen soittaa sinulle tai lähettää sinulle viestejä, ellei niitä ole myös estetty.</string>
     <string name="NetworkPreferenceFragment_molly_wont_connect_without_orbot_which_is_not_installed_on_this_device">Molly ei saa yhteyttä ilman Orbotia, jota ei ole asennettu tähän laitteeseen.</string>
-    <string name="NetworkPreferenceFragment_a_valid_port_number_is_between_0_and_65535">Kelvollinen porttinumero on välillä 0-65535</string>
+    <string name="NetworkPreferenceFragment_a_valid_port_number_is_between_0_and_65535">Kelvollinen porttinumero on välillä 0–65535</string>
     <string name="NewConversationActivity__s_is_not_registered_with_signal">%1$s ei ole rekisteröity Signaliin</string>
 </resources>
