Adjust time duration picker for passphrase lock timeout

--- a/app/src/main/res/layout/time_duration_picker_dialog.xml
+++ b/app/src/main/res/layout/time_duration_picker_dialog.xml
@@ -54,19 +54,25 @@
             android:textAppearance="@style/Signal.Text.BodySmall"
             android:textColor="@color/signal_colorOnSurfaceVariant" />
 
-    </LinearLayout>
+        <TextView
+            android:id="@+id/duration_second"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:gravity="center_horizontal"
+            android:textAppearance="@style/Signal.Text.HeadlineLarge"
+            android:textColor="@color/signal_colorOnSurfaceVariant"
+            tools:text="01" />
 
-    <TextView
-        android:id="@+id/duration_header"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="12dp"
-        android:paddingHorizontal="16dp"
-        android:text="@string/TimeDurationPickerDialog_minimum_duration_warning"
-        android:textColor="@color/signal_colorOnSurface"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/duration_layout" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center_horizontal"
+            android:text="@string/TimeDurationPickerDialog_single_letter_second_abbreviation"
+            android:textAppearance="@style/Signal.Text.BodySmall"
+            android:textColor="@color/signal_colorOnSurfaceVariant" />
+
+    </LinearLayout>
 
     <org.thoughtcrime.securesms.components.NumericKeyboardView
         android:id="@+id/duration_keyboard"
@@ -74,6 +80,6 @@
         android:layout_height="wrap_content"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/duration_header" />
+        app:layout_constraintTop_toBottomOf="@+id/duration_layout" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
