--- a/app/src/main/res/values/strings2.xml
+++ b/app/src/main/res/values/strings2.xml
@@ -92,4 +92,5 @@
     <string name="EnableAppUpdatesMegaphone_molly_can_periodically_check_for_new_releases_and_ask_you_to_install_them">Molly can periodically check for new releases and ask you to install them.</string>
     <string name="EnableAppUpdatesMegaphone_you_will_be_notified_when_updates_are_available">You will be notified when updates are available</string>
     <string name="NewConversationActivity__s_is_not_registered_with_signal">%1$s is not registered with Signal</string>
+    <string name="TimeDurationPickerDialog_single_letter_second_abbreviation">s</string>
 </resources>
